--- a/apps/www/templates/www/index.html
+++ b/apps/www/templates/www/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="col-md-4">
         <h2>自由</h2>
-        <p>We-Cloud 维云技术小组 QQ 群号为 <a href="http://qm.qq.com/cgi-bin/qm/qr?k=72NhrSwt3Nd9SJgGeEIcP-gCh3C7k_YB">85949649</a> ，你可以在里面自由的说出任何想法，提出任何问题，只要在 We 的能力范围内都将会尽力解答。</p>
+        <p>We-Cloud 维云技术小组 QQ 群号为 <a href="http://qm.qq.com/cgi-bin/qm/qr?k=72NhrSwt3Nd9SJgGeEIcP-gCh3C7k_YB" target="_blank"><span class="glyphicon glyphicon-new-window"></span>85949649</a> ，你可以在里面自由的说出任何想法，提出任何问题，只要在 We 的能力范围内都将会尽力解答。</p>
       </div>
     </div>
   </div>
