--- a/apps/mirror/templates/mirror/configurations.html
+++ b/apps/mirror/templates/mirror/configurations.html
@@ -12,15 +12,20 @@
 {% endblock %}
 
 {% block nav_list %}
-          <li class="active"><a href="#centos"><i class="glyphicon glyphicon-chevron-right"></i>CentOS</a></li>
-          <li><a href="#epel"><i class="glyphicon glyphicon-chevron-right"></i>EPEL</a></li>
-          <li><a href="#android"><i class="glyphicon glyphicon-chevron-right"></i>Android</a></li>
+  {% for more in more_list %}
+    <li><a href="#{{ more.key }}"><i class="glyphicon glyphicon-chevron-right"></i>{{ more.title }}</a></li>
+  {% endfor %}
 {% endblock %}
 
 {% block content %}
-{% include "mirror/include/centos.html" %}
-{% include "mirror/include/epel.html" %}
-{% include "mirror/include/android.html" %}
+  {% for more in more_list %}
+    <section id="{{ more.key }}">
+      <header class="page-header">
+        <h1>{{ more.title }} <small>{{ more.subtitle }}</small></h1>
+      </header>
+      {% autoescape off %}{{ more.content }}{% endautoescape %}
+    </section>
+  {% endfor %}
 {% endblock %}
 
 {% block more_js %}
