--- a/apps/mirror/templates/mirror/include/nav_more.html
+++ b/apps/mirror/templates/mirror/include/nav_more.html
@@ -1,8 +1,8 @@
         <li class="dropdown dropdown-we">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">配置说明&nbsp;<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="configurations.we#centos">CentOS</a></li>
-            <li><a href="configurations.we#epel">EPEL</a></li>
-            <li><a href="configurations.we#android">Android</a></li>
+            {% for more in more_list %}
+              <li><a href="{% url 'mirror:more' %}#{{ more.key }}">{{ more.title }}</a></li>
+            {% endfor %}
           </ul>
         </li>
