--- a/apps/mirror/templates/mirror/index.html
+++ b/apps/mirror/templates/mirror/index.html
@@ -27,12 +27,12 @@
         <tbody>
 {% for result in results %}
           <tr>
-            <td><a href="{{ result.mirror }}/">{{ result.mirror }}</a></td>
+            <td><a href="http://mirror.we.neusoft.edu.cn/{{ result.mirror }}/">{{ result.mirror }}</a></td>
             <td>{{ result.count }}</td>
             <td>{{ result.size }}</td>
-            <td>{{ result.timestamp }}</td>
+            <td>{{ result.timestamp|date:'Y-m-d H:i:s e'|default:'-' }}</td>
             <td><span class="label label-{{ result.style }}">{{ result.status }}</span></td>
-            <td><a href="configurations.we#{{ result.mirror }}"><i class="glyphicon glyphicon-arrow-right"></i></a></td>
+            <td><a href="more.we#{{ result.mirror }}"><i class="glyphicon glyphicon-arrow-right"></i></a></td>
           </tr>
 {% endfor %}
         </tbody>
@@ -40,7 +40,7 @@
     </section>
     <section>
       <header class="page-header">
-        <h3>教育网镜像站</h3>
+        <h3>教育网主要镜像站</h3>
       </header>
       <ul>
         <li><strong>东北地区：</strong>东北大学（<a href="http://mirror.neu.edu.cn">IPv4 & IPv6</a>, <a href="http://mirror.neu6.edu.cn">IPv6</a>）、大连理工大学（<a href="http://mirror.dlut.edu.cn">IPv4 & IPv6</a>）、大连东软信息学院（<a href="http://mirrors.neusoft.edu.cn">IPv4</a>）、哈尔滨工业大学（<a href="http://run.hit.edu.cn">IPv4 & IPv6</a>, <a href="http://run.hit6.edu.cn">IPv6</a>）
@@ -50,7 +50,7 @@
         <li><strong>华东南地区：</strong>上海交通大学（<a href="http://ftp.sjtu.edu.cn">IPv4</a>, <a href="http://ftp6.sjtu.edu.cn">IPv6</a>）、浙江大学（<a href="http://mirrors.zju.edu.cn">IPv4 & IPv6</a>）、厦门大学（<a href="http://mirrors.xmu.edu.cn">IPv4 & IPv6</a>, <a href="http://mirrors.xmu6.edu.cn">IPv6</a>）
         <li><strong>华南地区：</strong>中山大学（<a href="http://mirror.sysu.edu.cn">IPv4</a>）
         <li><strong>西北地区：</strong>兰州大学（<a href="http://mirror.lzu.edu.cn">IPv4 & IPv6</a>）
-        <li><strong>西南地区：</strong><em>暂无收录</em>
+        <li><strong>西南地区：</strong>重庆大学（<a href="http://mirrors.cqu.edu.cn">IPv4</a>）
       </ul>
     </section>
   </div>
