--- a/apps/www/templates/www/include/nav_more.html
+++ b/apps/www/templates/www/include/nav_more.html
@@ -1,8 +1,8 @@
         <li class="dropdown dropdown-we">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">更多服务&nbsp;<b class="caret"></b></a>
           <ul class="dropdown-menu">
-          {% for more_service in more_service_list %}
-            <li><a href="{% url 'www:more_services' %}#{{ more_service.key }}">{{ more_service.title }}</a></li>
-          {% endfor %}
+            {% for more in more_list %}
+              <li><a href="{% url 'www:more' %}#{{ more.key }}">{{ more.title }}</a></li>
+            {% endfor %}
           </ul>
         </li>
