--- a/apps/www/templates/www/more_services.html
+++ b/apps/www/templates/www/more_services.html
@@ -7,18 +7,18 @@
 {% endblock %}
 
 {% block nav_list %}
-        {% for more_service in more_service_list %}
-          <li><a href="#{{ more_service.key }}"><i class="glyphicon glyphicon-chevron-right"></i>{{ more_service.title }}</a></li>
-        {% endfor %}
+  {% for more in more_list %}
+    <li><a href="#{{ more.key }}"><i class="glyphicon glyphicon-chevron-right"></i>{{ more.title }}</a></li>
+  {% endfor %}
 {% endblock %}
 
 {% block content %}
-      {% for more_service in more_service_list %}
-        <section id="{{ more_service.key }}">
-          <header class="page-header">
-            <h1>{{ more_service.title }} <small>{{ more_service.subtitle }}</small></h1>
-          </header>
-{% autoescape off %}{{ more_service.content }}{% endautoescape %}
-        </section>
-      {% endfor %}
+  {% for more in more_list %}
+    <section id="{{ more.key }}">
+      <header class="page-header">
+        <h1>{{ more.title }} <small>{{ more.subtitle }}</small></h1>
+      </header>
+      {% autoescape off %}{{ more.content }}{% endautoescape %}
+    </section>
+  {% endfor %}
 {% endblock %}
