--- a/apps/iptv/templates/iptv/voice_of_china_2014.html
+++ b/apps/iptv/templates/iptv/voice_of_china_2014.html
@@ -23,18 +23,18 @@
           <tbody>
             <tr>
               <td>
-                <a href="//file.we.neusoft.edu.cn/N0PcsbnTQiaQMbmbdnqQJg.we">第一期 (7/18)</a>
+                <a href="{% url 'file:detail' 'N0PcsbnTQiaQMbmbdnqQJg' %}">第一期 (7/18)</a>
               <td>
-                <a href="//file.we.neusoft.edu.cn/S7meJFJSRZKRew3yFwjnSA.we">第三期 (8/1)</a>
+                <a href="{% url 'file:detail' 'S7meJFJSRZKRew3yFwjnSA' %}">第三期 (8/1)</a>
               <td>
-                <a href="//file.we.neusoft.edu.cn/ouN3O2reRCuDjfWwCZkNHw.we">第五期 (8/15)</a>
+                <a href="{% url 'file:detail' 'ouN3O2reRCuDjfWwCZkNHw' %}">第五期 (8/15)</a>
             <tr class="active">
               <td>
-                <a href="//file.we.neusoft.edu.cn/XWy5sTDEQ6aci3Gwv-triQ.we">第二期 (7/25)</a>
+                <a href="{% url 'file:detail' 'XWy5sTDEQ6aci3Gwv-triQ' %}">第二期 (7/25)</a>
               <td>
-                <a href="//file.we.neusoft.edu.cn/II0JWkBoSVWI1AwR768IXg.we">第四期 (8/8)</a>
+                <a href="{% url 'file:detail' 'II0JWkBoSVWI1AwR768IXg' %}">第四期 (8/8)</a>
               <td>
-                <a href="//file.we.neusoft.edu.cn/8xJwQuCRRYu0-7kq8M7q5g.we">第六期 (8/22)</a>
+                <a href="{% url 'file:detail' '8xJwQuCRRYu0-7kq8M7q5g' %}">第六期 (8/22)</a>
         </table>
         <table class="table table-iptv table-condensed">
           <thead>
@@ -43,14 +43,14 @@
           <tbody>
             <tr>
               <td>
-                <a href="//file.we.neusoft.edu.cn/wWdM-ZZ-SjWwkWXNU1I-Yg.we">那英 导师战队 (8/29)</a>
+                <a href="{% url 'file:detail' 'wWdM-ZZ-SjWwkWXNU1I-Yg' %}">那英 导师战队 (8/29)</a>
               <td>
-                <a href="//file.we.neusoft.edu.cn/zE7EveRGRYO9duI4uHVvfg.we">杨坤 导师战队 (9/12)</a>
+                <a href="{% url 'file:detail' 'zE7EveRGRYO9duI4uHVvfg' %}">杨坤 导师战队 (9/12)</a>
             <tr class="active">
               <td>
-                <a href="//file.we.neusoft.edu.cn/GX-sM3t6T3mgTJ_xvR2xgA.we">汪峰 导师战队 (9/5)</a>
+                <a href="{% url 'file:detail' 'GX-sM3t6T3mgTJ_xvR2xgA' %}">汪峰 导师战队 (9/5)</a>
               <td>
-                <a href="//file.we.neusoft.edu.cn/W9gc3SmHRYWBTMxGycd7-g.we">齐秦 导师战队 (9/19)</a>
+                <a href="{% url 'file:detail' 'W9gc3SmHRYWBTMxGycd7-g' %}">齐秦 导师战队 (9/19)</a>
         </table>
         <table class="table table-iptv table-condensed">
           <thead>
@@ -59,9 +59,9 @@
           <tbody>
             <tr>
               <td>
-                <a href="//file.we.neusoft.edu.cn/tBj54KhGTBShg5wevdlLHQ.we">那英/杨坤 导师战队 (9/26)</a>
+                <a href="{% url 'file:detail' 'tBj54KhGTBShg5wevdlLHQ' %}">那英/杨坤 导师战队 (9/26)</a>
               <td>
-                <a href="//file.we.neusoft.edu.cn/GGxoXILOTxCnWYoHJ5DDpw.we">齐秦/汪峰 导师战队 (9/30)</a>
+                <a href="{% url 'file:detail' 'GGxoXILOTxCnWYoHJ5DDpw' %}">齐秦/汪峰 导师战队 (9/30)</a>
         </table>
         <table class="table table-iptv table-condensed">
           <thead>
@@ -70,7 +70,7 @@
           <tbody>
             <tr>
               <td>
-                <a href="//file.we.neusoft.edu.cn/QuNwlvF1SE-m2K7x_KxaLw.we">总决赛 (10/7)</a>
+                <a href="{% url 'file:detail' 'QuNwlvF1SE-m2K7x_KxaLw' %}">总决赛 (10/7)</a>
         </table>
       </div>
     </section>
