--- a/we/templates/404.html
+++ b/we/templates/404.html
@@ -9,6 +9,9 @@
   <li>
     <p><strong>访问了一个已删除的资源</strong></p>
     <p>We 尽力保证资源的完整访问，但是有些资源由于 We 业务的调整、上游服务商的变更，或者由用户自行删除等原因仍可能造成该问题，请访问其他资源。
+  <li>
+    <p><strong>人为伪造请求</strong></p>
+    <p>We 的服务内部有多重逻辑规则，当试图人为伪造一个访问请求时，可能会显示本错误。
 </ul>
 <hr>
 <h4>如果仍有疑问，可以联系我们：</h4>
