--- a/we/templates/500.html
+++ b/we/templates/500.html
@@ -5,10 +5,13 @@
 <ul>
   <li>
     <p><strong>服务器代码错误</strong></p>
-    <p>We 尽力做了完整的代码测试，但是本次访问依然出现了非预期的结果。
+    <p>We 尽力做了完整的系统测试，但是本次访问依然出现了非预期的结果。
   <li>
     <p><strong>某一结点故障</strong></p>
     <p>We 的服务器是由多个服务器结点共同联合运行，某一结点出现故障均可能导致本次访问无法继续。
+  <li>
+    <p><strong>人为伪造请求</strong></p>
+    <p>We 的服务内部有多重逻辑规则，当试图人为伪造一个访问请求时，可能会显示本错误。
 </ul>
 <hr>
 <h4>一封包含有本次错误信息的邮件已经发送到管理员邮件中，请耐心等待管理员的修复。如果仍有疑问，可以联系我们：</h4>
