--- a/we/templates/we/sidenav_base.html
+++ b/we/templates/we/sidenav_base.html
@@ -13,12 +13,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3">
-        <nav class="affix">
+        <nav class="affix hidden-xs hidden-sm">
           <ul class="nav">
   {% block nav_list %}
   {% endblock %}
           </ul>
-	</nav>
+        </nav>
       </div>
       <div class="col-md-9">
   {% block content %}
